Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102249

QSplitter: Handle moves in non-pressed state too

XMLWordPrintable

    • Windows
    • 99f22e3fc8 (qt/qtbase/dev) 99f22e3fc8 (qt/tqtc-qtbase/dev) c6bdf14cd1 (qt/qtbase/6.3) 41726a90e1 (qt/qtbase/6.2) 41726a90e1 (qt/tqtc-qtbase/6.2) c6bdf14cd1 (qt/tqtc-qtbase/6.3)

      Steps to reproduce:

      • build & run the attached "splitter_button" project;
      • press on "Bt" button by mouse's left button and move to left or right.

      Result: Splitter's handle is moving to left or right.

      Expected result: Handle should not move, because we pressed on button.

        1. splitter_button.zip
          3 kB
          Nodir Temirkhodjaev
        For Gerrit Dashboard: QTBUG-102249
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            nodir.temir Nodir Temirkhodjaev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes