QSplitter: Don't move handle in non-pressed state

Fixes: QTBUG-102249
Change-Id: Ib1d74447e346760d1fc9960e11486e8dc7ea3bc0
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 99f22e3fc8caefcad810804da1a64446fb457337)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>